# three-corners

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-deploy-docs.yml
client/: Cargo.toml
client/src/: actions_menu.rs  board.rs  board_box.rs  game.rs  main.rs  players_states_box.rs  texture_pack.rs
core/: Cargo.toml
core-3c/: Cargo.toml
core-3c/data/buildings/: windmill.json
core-3c/src/info/: effect.rs
core/data/buildings/: townhall.json  windmill.json
core/data/synergies/: farm.json
core/src/: board.rs  building.rs  effect.rs  info.rs  kit.rs  lib.rs  synergy.rs  triangle.rs
core/src/board/: mod.rs  triangle.rs
core/src/building/: mod.rs
core/src/building_info/: mod.rs
core/src/effect_info/: mod.rs
core/src/info/: building.rs  effect.rs  mod.rs  synergy.rs
core/src/kit/: building.rs  mod.rs  synergy.rs
core/src/synergy/: mod.rs
core/src/synergy_info/: mod.rs  tests.rs
core_3c/: Cargo.toml
core_3c/data/buildings/: field.json
core_3c/data/synergies/: farm.json
core_3c/src/: board.rs  building.rs  effect.rs  game.rs  kit.rs  lib.rs  player_state.rs  synergy.rs  vector.rs
docs/: _config.yml  book.toml  index.md
docs/game_rules/: buildings.md  game_rules.md  synergies.md
docs/src/: SUMMARY.md  buildings.md  game_rules.md  overview.md  synergies.md
network/: Cargo.toml
network/client/: Cargo.toml
network/core/: Cargo.toml
network/server/: Cargo.toml
network/src/: bytes_represented.rs  lib.rs  message.rs  raw_message.rs
server/: Cargo.toml
server/logic_3c/: Cargo.toml
server/src/: main.rs
(+44 files in other folders)
